[project]
name = "sbs-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pymysql>=1.1.1",
    "pyside6>=6.9.1",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    "tzdata>=2025.2",
]
